--- a/src/components/watchVideo/WatchVideo.module.css
+++ b/src/components/watchVideo/WatchVideo.module.css
@@ -2,7 +2,6 @@
 
 .section {
   flex: 1 1 80%;
-  padding: 0 calc(var(--space-small) * 2);
 }
 
 .title {
@@ -14,8 +13,17 @@
   font-size: calc(var(--font-small) * 1.3);
 }
 
+.player {
+  width: 100%;
+  height: 80vh;
+}
+
 @media screen and (max-width: 768px) {
   .section {
     margin-bottom: var(--space-large);
+  }
+
+  .player {
+    height: var(--media-height);
   }
 }
