--- a/src/components/videoList/VideoList.module.css
+++ b/src/components/videoList/VideoList.module.css
@@ -1,16 +1,19 @@
 @import "../app.module.css";
 
-.videoList {
-  display: flex;
+.list {
   flex: 1 1 20%;
-  justify-content: center;
+}
+
+.videos {
+  display: flex;
+  justify-content: start;
   flex-wrap: wrap;
   padding: 0;
   margin: 0;
 }
 
 @media screen and (max-width: 768px) {
-  .videoList {
+  .videos {
     display: flex;
     flex-direction: column;
     align-items: center;
