--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -8,6 +8,7 @@
   align-items: center;
   padding: calc(var(--space-small) * 2);
   background-color: var(--header-color);
+  z-index: 1;
 }
 
 .btn {
