--- a/src/components/videoList/VideoList.module.css
+++ b/src/components/videoList/VideoList.module.css
@@ -2,17 +2,19 @@
 
 .list {
   flex: 1 1 20%;
+  margin: 0;
 }
 
 .videos {
   display: flex;
   justify-content: start;
   flex-wrap: wrap;
-  padding: 0;
-  margin: 0;
 }
 
 @media screen and (max-width: 768px) {
+  .list {
+    padding: 0;
+  }
   .videos {
     display: flex;
     flex-direction: column;
